August 18, 2017 Assignment JAVA

--- a/BANGIPR/18AUGUST2017/BANGIPR18AUG/.settings/org.eclipse.core.resources.prefs
+++ b/BANGIPR/18AUGUST2017/BANGIPR18AUG/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,4 @@
 eclipse.preferences.version=1
 encoding//resources/input.txt=UTF-8
+encoding//src/com/oocl/bangipr/hw5/RemoveSpace.java=UTF-8
+encoding//src/com/oocl/bangipr/hw8/ReplaceDuplicate.java=UTF-8
