--- a/BITUIGA/21AUG2017/BITUIGA21AUG_SMVC/.classpath
+++ b/BITUIGA/21AUG2017/BITUIGA21AUG_SMVC/.classpath
@@ -9,37 +9,37 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Users/User/Desktop/New folder/aopalliance-repackaged-2.5.0-b42.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/Desktop/New folder/cdi-api-1.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/Desktop/New folder/el-api-2.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/Desktop/New folder/hk2-api-2.5.0-b42.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/Desktop/New folder/hk2-locator-2.5.0-b42.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/Desktop/New folder/hk2-utils-2.5.0-b42.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/Desktop/New folder/javassist-3.22.0-CR2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/Desktop/New folder/javax.annotation-api-1.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/Desktop/New folder/javax.inject-1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/Desktop/New folder/javax.inject-2.5.0-b42.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/Desktop/New folder/javax.json.bind-api-1.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/Desktop/New folder/javax.json-1.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/Desktop/New folder/javax.json-api-1.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/Desktop/New folder/javax.servlet-api-3.0.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/Desktop/New folder/javax.ws.rs-api-2.1-m09.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/Desktop/New folder/jaxb-api-2.2.7.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/Desktop/New folder/jboss-interceptors-api_1.1_spec-1.0.0.Beta1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/Desktop/New folder/jersey-client.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/Desktop/New folder/jersey-common.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/Desktop/New folder/jersey-container-servlet.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/Desktop/New folder/jersey-container-servlet-core.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/Desktop/New folder/jersey-hk2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/Desktop/New folder/jersey-media-jaxb.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/Desktop/New folder/jersey-media-json-binding.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/Desktop/New folder/jersey-media-sse.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/Desktop/New folder/jersey-server.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/Desktop/New folder/jsr250-api-1.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/Desktop/New folder/org.osgi.core-4.2.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/Desktop/New folder/osgi-resource-locator-1.0.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/Desktop/New folder/persistence-api-1.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/Desktop/New folder/validation-api-1.1.0.Final.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/Desktop/New folder/yasson-1.0.jar"/>
+	<classpathentry kind="lib" path="D:/My Documents/jaxrs-ri-2.26-b09/jaxrs-ri/lib/jersey-client.jar"/>
+	<classpathentry kind="lib" path="D:/My Documents/jaxrs-ri-2.26-b09/jaxrs-ri/lib/jersey-common.jar"/>
+	<classpathentry kind="lib" path="D:/My Documents/jaxrs-ri-2.26-b09/jaxrs-ri/lib/jersey-container-servlet.jar"/>
+	<classpathentry kind="lib" path="D:/My Documents/jaxrs-ri-2.26-b09/jaxrs-ri/lib/jersey-container-servlet-core.jar"/>
+	<classpathentry kind="lib" path="D:/My Documents/jaxrs-ri-2.26-b09/jaxrs-ri/lib/jersey-hk2.jar"/>
+	<classpathentry kind="lib" path="D:/My Documents/jaxrs-ri-2.26-b09/jaxrs-ri/lib/jersey-media-jaxb.jar"/>
+	<classpathentry kind="lib" path="D:/My Documents/jaxrs-ri-2.26-b09/jaxrs-ri/lib/jersey-media-json-binding.jar"/>
+	<classpathentry kind="lib" path="D:/My Documents/jaxrs-ri-2.26-b09/jaxrs-ri/lib/jersey-media-sse.jar"/>
+	<classpathentry kind="lib" path="D:/My Documents/jaxrs-ri-2.26-b09/jaxrs-ri/lib/jersey-server.jar"/>
+	<classpathentry kind="lib" path="D:/My Documents/jaxrs-ri-2.26-b09/jaxrs-ri/ext/aopalliance-repackaged-2.5.0-b42.jar"/>
+	<classpathentry kind="lib" path="D:/My Documents/jaxrs-ri-2.26-b09/jaxrs-ri/ext/cdi-api-1.1.jar"/>
+	<classpathentry kind="lib" path="D:/My Documents/jaxrs-ri-2.26-b09/jaxrs-ri/ext/el-api-2.2.jar"/>
+	<classpathentry kind="lib" path="D:/My Documents/jaxrs-ri-2.26-b09/jaxrs-ri/ext/hk2-api-2.5.0-b42.jar"/>
+	<classpathentry kind="lib" path="D:/My Documents/jaxrs-ri-2.26-b09/jaxrs-ri/ext/hk2-locator-2.5.0-b42.jar"/>
+	<classpathentry kind="lib" path="D:/My Documents/jaxrs-ri-2.26-b09/jaxrs-ri/ext/hk2-utils-2.5.0-b42.jar"/>
+	<classpathentry kind="lib" path="D:/My Documents/jaxrs-ri-2.26-b09/jaxrs-ri/ext/javassist-3.22.0-CR2.jar"/>
+	<classpathentry kind="lib" path="D:/My Documents/jaxrs-ri-2.26-b09/jaxrs-ri/ext/javax.annotation-api-1.2.jar"/>
+	<classpathentry kind="lib" path="D:/My Documents/jaxrs-ri-2.26-b09/jaxrs-ri/ext/javax.inject-1.jar"/>
+	<classpathentry kind="lib" path="D:/My Documents/jaxrs-ri-2.26-b09/jaxrs-ri/ext/javax.inject-2.5.0-b42.jar"/>
+	<classpathentry kind="lib" path="D:/My Documents/jaxrs-ri-2.26-b09/jaxrs-ri/ext/javax.json.bind-api-1.0.jar"/>
+	<classpathentry kind="lib" path="D:/My Documents/jaxrs-ri-2.26-b09/jaxrs-ri/ext/javax.json-1.1.jar"/>
+	<classpathentry kind="lib" path="D:/My Documents/jaxrs-ri-2.26-b09/jaxrs-ri/ext/javax.json-api-1.1.jar"/>
+	<classpathentry kind="lib" path="D:/My Documents/jaxrs-ri-2.26-b09/jaxrs-ri/ext/javax.servlet-api-3.0.1.jar"/>
+	<classpathentry kind="lib" path="D:/My Documents/jaxrs-ri-2.26-b09/jaxrs-ri/ext/jaxb-api-2.2.7.jar"/>
+	<classpathentry kind="lib" path="D:/My Documents/jaxrs-ri-2.26-b09/jaxrs-ri/ext/jboss-interceptors-api_1.1_spec-1.0.0.Beta1.jar"/>
+	<classpathentry kind="lib" path="D:/My Documents/jaxrs-ri-2.26-b09/jaxrs-ri/ext/jsr250-api-1.0.jar"/>
+	<classpathentry kind="lib" path="D:/My Documents/jaxrs-ri-2.26-b09/jaxrs-ri/ext/org.osgi.core-4.2.0.jar"/>
+	<classpathentry kind="lib" path="D:/My Documents/jaxrs-ri-2.26-b09/jaxrs-ri/ext/osgi-resource-locator-1.0.1.jar"/>
+	<classpathentry kind="lib" path="D:/My Documents/jaxrs-ri-2.26-b09/jaxrs-ri/ext/persistence-api-1.0.jar"/>
+	<classpathentry kind="lib" path="D:/My Documents/jaxrs-ri-2.26-b09/jaxrs-ri/ext/validation-api-1.1.0.Final.jar"/>
+	<classpathentry kind="lib" path="D:/My Documents/jaxrs-ri-2.26-b09/jaxrs-ri/ext/yasson-1.0.jar"/>
+	<classpathentry kind="lib" path="D:/My Documents/jaxrs-ri-2.26-b09/jaxrs-ri/api/javax.ws.rs-api-2.1-m09.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
