--- a/YAPOJO/08AUG2017/YAPOJO08AUG/.classpath
+++ b/YAPOJO/08AUG2017/YAPOJO08AUG/.classpath
@@ -33,5 +33,6 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="D:/Yapo/Installer/apache-tomcat-8.5.16/apache/lib/servlet-api.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
