--- a/GROUP PROJECT/BOOKING SYSTEM/TestCreateBooking/pom.xml
+++ b/GROUP PROJECT/BOOKING SYSTEM/TestCreateBooking/pom.xml
@@ -32,6 +32,7 @@
 		<activemq.version>5.13.3</activemq.version>
 		<spring.version>4.3.1.RELEASE</spring.version>
 		<aspectj.version>1.8.2</aspectj.version>
+		<jackson.version>1.9.13</jackson.version>
 	</properties>
 	<dependencies>
 		<!-- Spring -->
@@ -135,6 +136,10 @@
 			<artifactId>aspectjtools</artifactId>
 			<version>${aspectj.version}</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-asl</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
 	</dependencies>
 </project>
