--- a/GROUP PROJECT/BOOKING SYSTEM/KerberosBooking/pom.xml
+++ b/GROUP PROJECT/BOOKING SYSTEM/KerberosBooking/pom.xml
@@ -41,8 +41,17 @@
 		<spring.version>4.3.1.RELEASE</spring.version>
 		<aspectj.version>1.8.2</aspectj.version>
 		<jackson.version>1.9.13</jackson.version>
+		<gson.version>2.6.2</gson.version>
 	</properties>
 	<dependencies>
+		
+		<!-- GSON -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>${gson.version}</version>
+		</dependency>
+
 		<!-- Spring -->
 		<dependency>
 			<groupId>org.springframework</groupId>
